--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,7 +20,7 @@ body{
   
     padding-top: 200px;
     padding-left: 50px;
-    width: 20%;
+    width: 25%;
     display: flex;
     flex-direction: column;
     align-items: start;
@@ -36,6 +36,16 @@ body{
     font-weight: 700;
     margin-bottom: 20px;
     text-align: center;
+}
+
+.heropage_content p {
+    display: -webkit-box;
+    -webkit-line-clamp: 10; 
+    -webkit-box-orient: vertical; 
+    overflow: hidden; 
+    text-overflow: ellipsis; 
+    line-height: 1.5;
+    max-height: calc(1.5em * 10); 
 }
 
 .btn_heropage{
@@ -60,8 +70,6 @@ body{
  
 }
 
-
-
 .movie-posters {
     padding: 20px;
     text-align: center;
@@ -82,6 +90,8 @@ body{
     flex-direction: column;
     align-items: center;
     text-align: center;
+    transform: 0.3s ease-in-out;
+    transition: transform 0.3s ease-in-out;
 }
 
 .swiper-slide img {
@@ -91,10 +101,22 @@ body{
     max-width: 250px;
     box-shadow: 0px 0px 25.8px 0px black;
     margin-bottom: 10px;
+    
+    
+}
+
+.swiper-slide:hover {
+    transform: scale(1.10);
 }
 
 .swiper-slide p {
     font-size: 14px;
+    color: var(--primary-color); 
+}
+
+.swiper-slide p strong {
+    font-size: 16px;
+    color: var(--text-color);
 }
 
 .movie-posters{
@@ -132,4 +154,88 @@ body{
 
 .tv-shows{
     overflow: hidden     ;
+}
+
+.hero-indicators {
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    gap: 10px;
+}
+
+.indicator {
+    width: 15px;
+    height: 15px;
+    background-color: rgba(255, 255, 255, 0.5);
+    border-radius: 50%;
+    position: relative;
+    overflow: hidden;
+    cursor: pointer; /* Permet de cliquer sur les indicateurs */
+}
+
+.indicator.active {
+    background-color: rgba(255, 165, 0, 1); /* Couleur orange pour l'indicateur actif */
+}
+
+.indicator::before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 3px;
+    background-color: orange;
+    transform: scaleX(0);
+    transform-origin: left;
+    transition: transform 10s linear; /* Barre de progression */
+}
+
+.indicator.active::before {
+    transform: scaleX(1); /* Barre remplie pour l'indicateur actif */
+}
+
+.latest-releases {
+    padding: 20px;
+    text-align: center;
+    color: var(--text-color);
+    overflow: hidden;
+
+}
+
+
+.latest-releases h2 {
+    margin-bottom: 20px;
+    font-size: 24px;
+    color: var(--text-color);
+}
+
+.swiper-container-latest {
+    width: 100%;
+    padding: 20px 0;
+}
+
+.swiper-container-latest .swiper-slide img {
+    width: 100%;
+    max-width: 250px;
+    margin-bottom: 10px;
+    box-shadow: 0px 0px 25.8px 0px black;
+  
+}
+
+.swiper-container-latest .swiper-slide .movie-info {
+    text-align: center;
+    font-size: 14px;
+    color: var(--text-color);
+}
+
+.swiper-container-latest .swiper-slide .movie-info h3 {
+    font-size: 16px;
+    color: var(--text-color);
+    margin-bottom: 5px;
+}
+
+.swiper-container img{
+    overflow: hidden;
 }
