--- a/public/css/style.css
+++ b/public/css/style.css
@@ -239,3 +239,13 @@ body{
 .swiper-container img{
     overflow: hidden;
 }
+
+
+h2{ 
+    text-align: left;
+    font-size: 1.5rem;
+    margin-bottom: 20px;
+    padding-left: 10px;
+    border-left: 4px solid var(--cta-color);
+    color: var(--text-color);
+}
