change paths + localstorage

--- a/views/films.html
+++ b/views/films.html
@@ -7,10 +7,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
-    <link rel="stylesheet" href="./public/css/root.css">
-    <link rel="stylesheet" href="./public/css/nav.css">
-    <link rel="stylesheet" href="./public/css/films.css">
-    <link rel="stylesheet" href="./public/css/series.css">
+    <link rel="stylesheet" href="../public/css/root.css">
+    <link rel="stylesheet" href="../public/css/nav.css">
+    <link rel="stylesheet" href="../public/css/films.css">
+    <link rel="stylesheet" href="../public/css/series.css">
     <title>MOVELA - Films</title>
 </head>
 <body>
@@ -31,10 +31,10 @@
         <div id="categories-container"></div>
     </main>
 
-    <script src="./components/nav.js"></script>
-    <script src="./controllers/js/nav.js"></script>
-    <script src="./controllers/js/films.js"></script>
-    <script src="./controllers/js/search.js"></script>
+    <script src="../components/nav.js"></script>
+    <script src="../controllers/js/nav.js"></script>
+    <script src="../controllers/js/films.js"></script>
+    <script src="../controllers/js/search.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             initNavbar();
