Finish favorites page

--- a/views/favoris.html
+++ b/views/favoris.html
@@ -8,14 +8,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
-    <link rel="stylesheet" href="./public/css/fav.css">
-    <link rel="stylesheet" href="./public/css/root.css">
-    <link rel="stylesheet" href="./public/css/nav.css">
-    <link rel="stylesheet" href="./public/css/style.css">
-    <script src="./controllers/js/favoris.js"defer></script>
-    <script src="./controllers/js/search.js"defer></script>
-    <script src="./controllers/js/nav.js"defer></script>
-    <script src="./controllers/js/carroussel.js"></script>
+    <link rel="stylesheet" href="../public/css/fav.css">
+    <link rel="stylesheet" href="../public/css/root.css">
+    <link rel="stylesheet" href="../public/css/nav.css">
+    <link rel="stylesheet" href="../public/css/style.css">
+    <script src="../controllers/js/favoris.js"defer></script>
+    <script src="../controllers/js/search.js"defer></script>
+    <script src="../controllers/js/nav.js"defer></script>
+    <script src="../controllers/js/carroussel.js"></script>
     <title>MOVELA - Accueil</title>
 </head>
 <body>
