--- a/views/series.html
+++ b/views/series.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../public/css/root.css">
     <link rel="stylesheet" href="../public/css/nav.css">
     <link rel="stylesheet" href="../public/css/series.css">
+    <script src="../controllers/js/favoris.js"defer></script>
     <title>MOVELA - Séries</title>
 </head>
 <body>
