--- a/views/films.html
+++ b/views/films.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../public/css/nav.css">
     <link rel="stylesheet" href="../public/css/films.css">
     <link rel="stylesheet" href="../public/css/series.css">
+    <script src="../controllers/js/favoris.js"></script>
     <title>MOVELA - Films</title>
 </head>
 <body>
