--- a/views/films.html
+++ b/views/films.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../public/css/nav.css">
     <link rel="stylesheet" href="../public/css/films.css">
     <link rel="stylesheet" href="../public/css/series.css">
-    <script src="../controllers/js/favoris.js"></script>
+    <script src="../controllers/js/favoris.js"defer></script>
     <title>MOVELA - Films</title>
 </head>
 <body>
